--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -13,6 +13,6 @@ jobs:
       - name: Run Lighthouse
         uses: treosh/lighthouse-ci-action@v3
         with:
-          configPath: '../../lighthouserc.json'
+          configPath: './lighthouserc.json'
           runs: 3
           temporaryPublicStorage: true
